Add proto definitions for cluster group explanation service
Introduce `ClusterGroupService` with a `findGroup` RPC and its corresponding request/response messages. Refactor `ClusterService.proto` to align with the new package structure for better organization.